# pacman

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
src/: CMakeLists.txt  constants.cpp  constants.h  game.cpp  game.h  levels.cpp  levels.h  main.cpp  maze.cpp  maze.h  player.cpp  player.h
tests/: CMakeLists.txt  tests.cpp
